--- a/BACK/languages/plugins/akismet-de_DE.po
+++ b/BACK/languages/plugins/akismet-de_DE.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Plugins - Akismet Anti-spam: Spam Protection - Stable (latest release) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2024-11-20 15:47:52+0000\n"
+"PO-Revision-Date: 2024-12-07 11:55:10+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -651,7 +651,7 @@ msgstr "Für weitere Informationen: %s"
 #. translators: The placeholder is an error code returned by Akismet.
 #: views/notice.php:78
 msgid "Akismet error code: %s"
-msgstr "Akismet Fehler-Code: %s"
+msgstr "Akismet-Fehler-Code: %s"
 
 #: views/notice.php:37
 msgid "Some comments have not yet been checked for spam by Akismet. They have been temporarily held for moderation and will automatically be rechecked later."
@@ -719,7 +719,7 @@ msgstr "Akismet Anti-Spam-Genauigkeit"
 
 #: views/config.php:142
 msgid "Show the number of approved comments beside each comment author."
-msgstr "Zeige neben jedem Kommentar-Autoren die Anzahl der zugelassenen Kommentare."
+msgstr "Neben jedem Kommentar-Autor die Anzahl der zugelassenen Kommentare anzeigen."
 
 #: views/config.php:59
 msgid "Accuracy"
@@ -748,7 +748,7 @@ msgstr "Bitte <a href=\"%1$s\">aktualisiere WordPress</a> auf eine aktuelle Vers
 #. number required.
 #: class.akismet.php:1735
 msgid "Akismet %1$s requires WordPress %2$s or higher."
-msgstr "Akismet %1$s benötigt WordPress %2$s oder höher."
+msgstr "Akismet %1$s erfordert WordPress %2$s oder höher."
 
 #: class.akismet-admin.php:736
 msgid "Akismet cleared this comment during an automatic retry."
@@ -846,7 +846,7 @@ msgstr "Verlauf"
 
 #: class.akismet-admin.php:647 class.akismet-admin.php:655
 msgid "View comment history"
-msgstr "Kommentar-Verlauf ansehen"
+msgstr "Kommentar-Verlauf anzeigen"
 
 #. translators: %s: Username.
 #: class.akismet-admin.php:634
